# rv32m1_ri5cy-hal

./: Cargo.toml  LICENSE-MIT  Pinout.csv  Pinout.xlsx  README.md  asm.S  asm.bat  build.rs  memory.x  openocd.gdb
.cargo/: config
examples/: gpio-port-free.rs  led-output.rs  serial-hello-world.rs  vega-lite-led.rs
src/: gpio.rs  lib.rs  lptmr.rs  lpuart.rs  pcc.rs  port.rs  prelude.rs  scg.rs  serial.rs  timer.rs  tstmr.rs
