[package]
name = "rv32m1_ri5cy-hal"
version = "0.0.1"
authors = ["SHA Miao <shamiaoc@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rv32m1-rust/rv32m1_ri5cy-hal"
description = "HAL for the RI5CY core of RV32M1 chips"
keywords = ["riscv", "rv32m1", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2018"

[dependencies]
embedded-hal = "1.0.0-alpha.1"
embedded-time = "0.10.0"
nb = "0.1.1"
riscv = "0.6"
rv32m1_ri5cy-pac = "^0.1.1"

[dev-dependencies]
panic-halt = "*"
riscv-rt = "*"

[lib]
name = "rv32m1_ri5cy_hal"
test = false
bench = false

[profile.release]
debug = true
